--- a/fcapp/static/css/main.css
+++ b/fcapp/static/css/main.css
@@ -12,6 +12,27 @@ a {
 	color: #29bb89;
 }
 
+.ceritificate-icon {
+	height: 25px;
+	width: 25px;
+}
+
+main {
+	padding-top: 3rem;
+}
+
+main h2 {
+	margin-bottom: 2rem;
+}
+
+tr > td:last-of-type {
+	vertical-align: middle;
+}
+  
+tr > td:last-of-type img:not(:last-of-type) {
+	margin-right: .5rem;
+}
+
 /* Hero image */
 .hero-image {
 	background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/static/images/hero-image.jpg");
