--- a/fcapp/templates/base.html
+++ b/fcapp/templates/base.html
@@ -24,14 +24,20 @@
 		<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 			<a class="navbar-brand" href="#">Food Companion</a>
 			<ul class="navbar-nav ml-auto">
-				<li class="nav-item">
-					<a class="nav-link btn btn-dark" href="#">Login</a>
-				</li>
+				{% if user.is_authenticated %}
+					<li class="nav-item">
+						<a class="nav-link btn btn-dark" href="{% url 'logout' %}">Welcome, {{ user.username }}! Click here to logout</a>
+					</li>
+				{% else %}
+					<li class="nav-item">
+						<a class="nav-link btn btn-dark" href="{% url 'login' %}">Login</a>
+					</li>
+				{% endif %}
 			</ul>
 		</nav>
 		{% block top %}
 		{% endblock %}
-		<main class="container">
+		<main class="container" id="app">
 			{% block content %}
 			{% endblock %}
 		</main>
@@ -41,5 +47,9 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 		-->
+		<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+		<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+		{% block vuescript %}
+		{% endblock %}
 	</body>
 </html>
